# synthgenie

./: .gitmodules  BUGFIX_FINAL_RESULT.md  LICENSE  README.md
.github/workflows/: claude-code-review.yml  claude.yml  test.yml
api/: .dockerignore  .env.dokploy.template  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  extract_from_data.py  extract_value_mappings.py  pyproject.toml
api/docs/: OPTIMIZATION_RESULTS.md  TWO_AGENT_SYSTEM.md  agent_loop_fix.md  api_authentication.md  api_routes.md  database.md  digitone.md  digitone_agent_improvements.md  digitone_midi_audit.md  digitone_midi_fixes_summary.md  digitone_multi_agent_architecture.md  digitone_multi_agent_test_results.md  digitone_setup_guide.md  moog-midi.md  moog_system_prompt.md  nrpn-fine-grained-control-fix.md  og_digitone.md  pydantic_ai_notes.md  uv.md
api/synthgenie/: app.py
api/synthgenie/auth/: __init__.py  api_key.py  models.py  routes.py  schemas.py  services.py
api/synthgenie/config/: digitone_params.py
api/synthgenie/config/constants/: filters.py  lfo.py
api/synthgenie/data/: amp.py  digitone_params.py  filters.py  fm_drum.py  fm_tone.py  fx.py  lfo.py  swarmer.py  wavetone.py
api/synthgenie/data/constants/: amp.py  fx.py  wavetone.py
api/synthgenie/db/: __init__.py  connection.py  crud.py  models.py
api/synthgenie/managers/: websocket.py
api/synthgenie/middleware/: __init__.py  domain_verification.py
api/synthgenie/models/: api_key.py
api/synthgenie/routes/: agent.py  api_keys.py
api/synthgenie/schemas/: agent.py  api_key.py  digitone.py  user.py
api/synthgenie/services/: agent.py  amp_fx_tool.py  auth.py  filter_tool.py  lfo_tool.py  synth_controller.py  wavetone_tool.py
api/synthgenie/synthesizers/digitone/: routes.py  services.py
api/synthgenie/synthesizers/digitone/agents/: agent_workflow.py  fm_drum_agent.py  fm_tone_agent.py  router_agent.py  shared.py  sound_design_agent.py  swarmer_agent.py  validation_agent.py  wavetone_agent.py
api/synthgenie/synthesizers/digitone/tools/: __init__.py  amp_fx_tool.py  euclidean_tool.py  filter_tool.py  fm_drum_tool.py  fm_tone_tool.py  lfo_tool.py  misc_tool.py  mixer_tool.py  send_fx_tool.py  swarmer_tool.py  track_tool.py  trig_tool.py  wavetone_tool.py
api/synthgenie/synthesizers/shared/agents/: validation_agent.py
api/synthgenie/synthesizers/shared/schemas/: agent.py
api/synthgenie/synthesizers/sub37/: README.md  routes.py  services.py
api/synthgenie/synthesizers/sub37/agents/: agent_orchestrator.py  sound_design_agent.py  tool_selector_agent.py
api/synthgenie/synthesizers/sub37/schemas/: toolset_selection.py
api/synthgenie/synthesizers/sub37/tools/: amp_tool.py  arp_tool.py  filter_tool.py  fx_tool.py  glide_tool.py  global_tool.py  lfo_tool.py  mod_tool.py  osc_tool.py
api/synthgenie/synthesizers/sub37/toolsets/: __init__.py  amplifier_toolset.py  arpeggiator_toolset.py  effects_toolset.py  filter_toolset.py  glide_toolset.py  modulation_toolset.py  oscillator_toolset.py  tool_selector.py
api/synthgenie/utils/: __init__.py  parameter_utils.py
elektron_sysex/: Makefile  README.md  pyproject.toml
elektron_sysex/dn_patches/: H195 EMPTY_FM_DRUM.dn2pst  H196 EMPTY_SWARMER.dn2pst  H197 EMPTY_MIDI.dn2pst  H198 EMPTY_WAVETONE.dn2pst  H199 EMPTY_FM_TONE.dn2pst
elektron_sysex/docs/: CAPTURE_TRANSFER.md  DIGITONE_REVERSE_ENGINEERING_FINDINGS.md  MESSAGES_FROM_MIDI.md  TRANSFER_PROTOCOL_DISCOVERED.md  WORKING_SOLUTION_FOR_PATCH_TRANSFER.md
lobe/: package.json
ui/: .env.development  .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  react-router.config.ts  tsconfig.json  vercel.json  vite.config.ts
ui/.react-router/types/: +register.ts
ui/.react-router/types/app/features/chat/+types/: ChatPage.ts
ui/.react-router/types/app/features/welcome/+types/: WelcomePage.ts
ui/app/: root.tsx  routes.tsx
ui/app/features/api/components/: ApiKeyManager.tsx
ui/app/features/api/hooks/: useApiKey.ts  useSynthGenieApi.ts
ui/app/features/api/types/: index.ts
ui/app/features/api/utils/: getApiBaseUrl.ts
ui/app/features/chat/: ChatPage.tsx  ChatView.tsx
ui/app/features/chat/components/: ChatApp.tsx  ChatHeader.tsx  ChatInputArea.tsx  MessageItem.tsx  MessageList.tsx  MidiAccessRestriction.tsx
ui/app/features/chat/hooks/: useAutoScroll.ts  useChatMessages.ts  useTextAreaAutoSize.ts
ui/app/features/chat/types/: index.ts
ui/app/features/chat/utils/: chatUtils.ts
ui/app/features/digitakt/: DigitaktPage.tsx  README.md
ui/app/features/digitakt/components/: DeviceTest.tsx  DriveExplorer.tsx
ui/app/features/digitakt/hooks/: useDigitaktDrive.ts  useDigitaktSysEx.ts  useFileOperations.ts
ui/app/features/digitakt/types/: drive.ts  operations.ts  sysex.ts
ui/app/features/digitakt/utils/: pathUtils.ts  sysex.ts
ui/app/features/midi-test/: MidiTestPage.tsx  parameterData.ts  valueMapping.ts  valueMappings.json
ui/app/features/midi/components/: MidiDeviceSelector.tsx  SynthSelector.tsx
ui/app/features/midi/hooks/: useMidi.ts  useMidiDeviceValidation.ts
ui/app/features/midi/types/: index.ts
ui/app/features/welcome/: WelcomePage.tsx  index.ts
ui/app/features/welcome/components/: welcome.tsx
ui/app/lib/: sentry.ts
ui/app/shared/types/: route.ts
ui/app/styles/: global.css
ui/docs/: design_system.md
