[project]
name = "api"
version = "0.1.0"
description = "AI backend for synthgenie"
readme = "README.md"
requires-python = ">=3.12"

license = { text = "MIT" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

authors = [{ name = "zerubeus", email = "zerubeus@gmail.com" }]

dependencies = ["fastapi>=0.115.12", "pydantic-ai>=0.0.46"]

[project.scripts]
start = "synthgenie.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synthgenie"]
